Fix nav covered issue

--- a/components/hamburger/hamburger.module.css
+++ b/components/hamburger/hamburger.module.css
@@ -1,6 +1,6 @@
 .nav {
   position: fixed;
-  z-index: 4;
+  z-index: 100;
 }
 
 .menuToggle {
